--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -28,7 +28,7 @@ main {
     background-color: #344041;
 }
 .content-table thead tr {
-    background-color: #65CAD1;
+    background-color: #b0c4de;
     color: #ffffff;
     text-align: left;
     font-weight: bold;
