--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -9,7 +9,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background-color: crimson;
+    background-color: peachpuff;
     font-family: 'Poppins', sans-serif;
 }
 html {
