--- a/src/main/resources/static/css/aboutus.css
+++ b/src/main/resources/static/css/aboutus.css
@@ -43,7 +43,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #f9fafb !important;
+    background-color: #7fffd4 !important;
 }
 
 header {
