--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible"content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>krishal_satta</title>
+  <title>Matshya gallery</title>
   <link rel="stylesheet" th:href="@{/css/Indexstyle.css}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
